# MMNET_With_QT

./: BackgroundWidget.cpp  BackgroundWidget.h  CMakeLists.txt  README.md  config.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makeToRelease.sh  mymessagebox.cpp  mymessagebox.h  savedsettingdialog.cpp  savedsettingdialog.h  test_chinese_detection.cpp  worker.cpp  worker.h
